# hi-language

./: .gitignore  .stylish-haskell.yaml  README.md  hi.cabal
app/: Main.hs
src/HI/: Action.hs  Base.hs  Evaluator.hs  Parser.hs  Pretty.hs
test/: Main.hs  Parsing.hs  Print.hs  T1.hs  T10.hs  T11.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs  T8.hs  T9.hs  Util.hs
