cabal-version: 1.12

name:           hi
version:        0.1.0.0
author:         Pavel Martynov
maintainer:     covariancemomentum@gmail.com
copyright:      2021 Pavel Martynov
license:        MIT
build-type:     Simple

library
  exposed-modules:
      HI.Action
      HI.Base
      HI.Evaluator
      HI.Parser
      HI.Pretty
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , haskeline
    , megaparsec
    , optparse-applicative
    , parser-combinators
    , prettyprinter
    , prettyprinter-ansi-terminal
    , random
    , scientific
    , serialise
    , text
    , time
    , transformers
    , zlib
  default-language: Haskell2010
