cabal-version: 1.12

name:           hi
version:        0.1.0.0
author:         Pavel Martynov
maintainer:     covariancemomentum@gmail.com
copyright:      2021 Pavel Martynov
license:        MIT
build-type:     Simple

library
  exposed-modules:
      HI.Action
      HI.Base
      HI.Evaluator
      HI.Parser
      HI.Pretty
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , haskeline
    , megaparsec
    , optparse-applicative
    , parser-combinators
    , prettyprinter
    , prettyprinter-ansi-terminal
    , random
    , scientific
    , serialise
    , text
    , time
    , transformers
    , zlib
  default-language: Haskell2010

executable hi
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , haskeline
    , hi
    , megaparsec
    , optparse-applicative
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
    , transformers
  default-language: Haskell2010

executable test
  main-is:
    Main.hs
  hs-source-dirs:
    test
  other-modules:
      T1
    , T2
    , T3
    , T4
    , T5
    , T6
    , T7
    , T8
    , T9
    , T10
    , T11
    , Parsing
    , Print
    , Util
  build-depends:
      base >=4.7 && <5
    , hi
    , bytestring
    , containers
    , directory
    , haskeline
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
    , time
    , transformers
    , tasty-hspec
    , tasty
    , hspec
    , hspec-core
    , hedgehog
    , tasty-hedgehog
    , silently
  default-language:
    Haskell2010
